[package]
name = "nd_binary"
version = "0.1.0"
authors = ["anotherhollow1125 <anotherhollow1125@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huffman = { git = "https://github.com/o1810156/huffman.git" }